-app: add footer component -main.css: add classes for animation when the website is scrolled -add footer component -IconCard: add composable useScrollAnimation to animate elemntos on scroll -HeaderComponent: delete div, no necesary -NavBar: change unit width on menu items, to % instead of vw that causes an issue on mobile screen -add useScrollAnimation composable for animate elements when scroll happens -HomePage: delete unnecesary div

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,2 +1,17 @@
 @import "./reset.css";
-@import "./variables.css"
+@import "./variables.css";
+
+/* Scroll Animation */
+
+.appear-animation {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: 
+    opacity 0.6s cubic-bezier(0.16,1,0.3,1),
+    transform 0.8s cubic-bezier(0.16,1,0.3,1);
+}
+
+.appear-active {
+  opacity: 1;
+  transform: translateY(0);
+}
